--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 
       <ul>
         <li class="logo">
-          IMG
+
         </li>
 
         <li class="txt">
           <h1>WAP</h1>
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
+          nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
+           exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
         </li>
       </ul>
 
@@ -25,8 +28,10 @@
     <section>
 
     </section>
+
     <footer>
 
     </footer>
+
   </body>
 </html>
