--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>WAP</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css.css">
   </head>
   <body>
     <nav>
-      HOME
+      <ul>
+        <li>HOME</li>
+        <li>JOBS</li>
+        <li>HOME</li>
+        <li>HOME</li>
+
+        <li id="window">HOME</li>
+      </ul>
+
     </nav>
     <header>
 
@@ -34,4 +43,7 @@
     </footer>
 
   </body>
+  <script type="text/javascript" src="javascript.js">
+
+  </script>
 </html>
