add jobs on section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
     </header>
     <section>
 
+      <ul>
+        <li>
+          <img src="img/img.svg" alt="Jobs">
+          <span>JOB ONE</span>
+        </li>
+        <li>
+          <img src="img/img.svg" alt="Jobs">
+          <span>JOB TWO</span>
+        </li>
+        <li>
+          <img src="img/img.svg" alt="Jobs">
+          <span>JOB TREE</span>
+        </li>
+        <li>
+          <img src="img/img.svg" alt="Jobs">
+          <span>JOB FOUR</span>
+        </li>
+      </ul>
+
     </section>
 
     <footer>
