--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="css.css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>HOME</li>
-        <li>JOBS</li>
-        <li>HOME</li>
-        <li>HOME</li>
 
-        <li id="window">HOME</li>
+    <div id="menuIco">
+      <img src="img/menuIco.svg" alt="">
+    </div>
+
+    <nav id="nav">
+      <ul id="menuRow">
+        <li id="pr1">HOME</li>
+        <li id="pr2">Project 01</li>
+        <li id="pr3">Project 02</li>
+        <li id="pr4">Project 03</li>
       </ul>
-
     </nav>
     <header>
 
@@ -25,11 +27,9 @@
 
         </li>
 
-        <li class="txt">
-          <h1>WAP</h1>
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
-          nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
-           exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+        <li id="txtB" class="txt">
+
+
         </li>
       </ul>
 
